[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.5.0"
serum-pool = {version = "0.1.0", git = "https://github.com/wilbarnes/custom-pool", default-features = false, branch = "main" }
spl-token = { version = "3.0.0", features = ["no-entrypoint"] }
# syn = "=1.0.57"
borsh = { git = "https://github.com/project-serum/borsh", branch = "serum"  }

[features]

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
