[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.5.0"
spl-token = { version = "3.0.0", features = ["no-entrypoint"] }
serum-pool = {version = "0.3.0", git = "https://github.com/wilbarnes/custom-pool", default-features = false, branch = "main" }
spl-token-lending = {version = "0.1.0", git = "https://github.com/solana-labs/solana-program-library", branch = "master", default-features = false, features = ["no-entrypoint"]}
borsh = { git = "https://github.com/project-serum/borsh", branch = "serum"  }
uint = "0.8"

[features]

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
